<resources>
    <string name="app_name">PlayMent</string>
    <string name="description_album_cover">Portada del álbum</string>
    <string name="label_track">Canción</string>
    <string name="label_artist">Artista</string>
    <string name="label_album">Álbum</string>
    <string name="label_release">Fecha de lanzamiento</string>
    <string name="label_disc_and_track_number">Disco %1$d, canción %2$d</string>
    <string name="label_duration">Duración</string>
    <string name="message_error_connection">Error en la conexión.</string>
    <string name="format_key_value">%1$s: %2$s</string>
    <string name="description_background_image">Imágen de fondo</string>
    <string name="message_welcome">¡Bienvenido a TunaSort!</string>
    <string name="label_login">Ingresar</string>
    <string name="label_register">Registarse</string>
    <string name="label_reset_password">Reestablecer contraseña</string>
    <string name="message_reset_password">Ingrese su correo para recibir el enlace para restablecer</string>
    <string name="label_send">Enviar</string>
    <string name="label_email">Email</string>
    <string name="label_password">Contraseña</string>
    <string name="error_no_email">Se requiere el correo</string>
    <string name="error_no_password">Se requiere una contraseña de por lo menos 6 caracteres</string>
    <string name="label_sign_out">Cerrar sesión</string>
    <string name="label_close">Cerrar</string>
    <string name="label_show_location">Mostrar ubicación</string>
    <string name="message_password_reset_mail_success">El enlace para restablecer la contraseña ha sido enviado a su correo</string>
    <string name="message_password_reset_mail_error">El enlace no se ha podido enviar: %1$s</string>
    <string name="error_please_email">Favor de ingresar la dirección de correo</string>
    <string name="label_cancel">Cancelar</string>
    <string name="message_auth_success">Autenticación exitosa.</string>
    <string name="message_register_success">Registro exitoso.</string>
    <string name="error_invalid_email">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="error_wrong_password">Error: La contraseña no es válida</string>
    <string name="error_account_exists_with_different_credential">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="error_email_already_in_use">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="error_user_token_expired">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="error_user_not_found">Error: No existe el usuario con la información proporcionada.</string>
    <string name="error_weak_password">La contraseña debe de tener por lo menos 6 caracteres.</string>
    <string name="error_no_network">Red no disponible o se interrumpió la conexión</string>
    <string name="error_no_auth">Error. No se pudo autenticar exitosamente.</string>
</resources>