<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.TrackDetailFragment">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/anim_loading"
        android:indeterminateDuration="1500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:contentDescription="@string/description_background_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/TopGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/BottomGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/LeftGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RightGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgAlbumCover"
            tools:src="@drawable/ic_album"
            app:riv_corner_radius="10dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="@id/TopGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine" />

        <TextView
            android:id="@+id/txtTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sulphur_point_light"
            android:text="@string/label_track"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine"
            app:layout_constraintTop_toBottomOf="@id/imgAlbumCover" />

        <TextView
            android:id="@+id/txtTrackArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sulphur_point_light"
            android:text="@string/label_artist"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine"
            app:layout_constraintTop_toBottomOf="@id/txtTrackName" />

        <TextView
            android:id="@+id/txtTrackAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:fontFamily="@font/sulphur_point_light"
            android:text="@string/label_album"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine"
            app:layout_constraintTop_toBottomOf="@id/txtTrackArtist" />

        <TextView
            android:id="@+id/txtTrackRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/label_release"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/txtTrackDiscAndTrackNumber"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine" />

        <TextView
            android:id="@+id/txtTrackDiscAndTrackNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/label_disc_and_track_number"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/txtTrackDuration"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine" />

        <TextView
            android:id="@+id/txtTrackDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_duration"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/BottomGuideLine"
            app:layout_constraintEnd_toEndOf="@id/RightGuideLine"
            app:layout_constraintStart_toStartOf="@id/LeftGuideLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>