<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:elevation="32dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        style="@style/PlayMent_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:foreground="@drawable/custom_ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/CenterGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgAlbumCover"
                android:src="@drawable/ic_album"
                android:contentDescription="@string/description_album_cover"
                app:riv_corner_radius="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/lblTrack"
                android:text="@string/label_track"
                android:textSize="21sp"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/CenterGuideline"
                app:layout_constraintStart_toEndOf="@id/imgAlbumCover"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/lblArtist"
                android:text="@string/label_artist"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/CenterGuideline"
                app:layout_constraintStart_toEndOf="@id/imgAlbumCover"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>